# templa

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot.yml  update-nix.yml
common/: .gitmessage  CONTRIBUTING.md  flake.nix
templa/: main.py
templates/go/: .gitignore  AGENTS.md  LICENCE  flake.nix  go.mod
templates/go/.github/: dependabot.yml
templates/notebooks/: .gitignore  flake.nix  pyproject.toml
templates/notebooks/.github/: dependabot.yml
templates/notebooks/.github/workflows/: check.yml  update-nix.yml
templates/python/: flake.nix  pyproject.toml
templates/python/.github/workflows/: update-nix.yml
templates/web-front/: .gitignore  .oxlintrc.json  package.json  pnpm-lock.yaml
