[project]
name = "templa"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.24.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[project.scripts]
templa = "templa.main:app"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"__future__.annotations" = {msg = "Python 3.14+ uses PEP 649 for deferred evaluation of annotations. Do not use PEP 563."}

[tool.setuptools.packages.find]
include = ["templa"]

[tool.uv]
exclude-newer = "P3D"
package = true
